using percentages rather than rem seems to fix the overlap issue. Going to look into containing divs to make it better in the future

--- a/css/custom.css
+++ b/css/custom.css
@@ -9,9 +9,9 @@
     text-align: center
 }
 .container {
-    padding-top: 5rem;
+    padding-top: 10%;
     min-height: -webkit-fill-available;
-    height: 60rem;
+    height: 50%;
     min-height: fill-available;
 }
 .top-banner {
